crates/zizmor/tests/integration/snapshots/integration__snapshot__template_injection-8.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"template-injection/pr-425-backstop/action.yml\")).run()?"
---
error[template-injection]: code injection via template expansion
  --> @@INPUT@@:13:7
   |
13 |       run: |
   |       ^^^ this code block
14 |         hello ${{ inputs.expandme }}
   |                   ^^^^^^^^^^^^^^^ may expand into attacker-controllable code
   |
   = note: audit confidence → High

error[template-injection]: code injection via template expansion
  --> @@INPUT@@:20:9
   |
20 |         script: return "${{ inputs.expandme }}"
   |         ^^^^^^              ^^^^^^^^^^^^^^^ may expand into attacker-controllable code
   |         |
   |         this code block
   |
   = note: audit confidence → High

error[template-injection]: code injection via template expansion
  --> @@INPUT@@:25:9
   |
25 |         inlineScript: |
   |         ^^^^^^^^^^^^ this code block
26 |           echo "hello ${{ inputs.expandme }}"
   |                           ^^^^^^^^^^^^^^^ may expand into attacker-controllable code
   |
   = note: audit confidence → High

error[template-injection]: code injection via template expansion
  --> @@INPUT@@:31:9
   |
31 |         inlineScript: Get-AzVM -ResourceGroupName "${{ inputs.expandme }}"
   |         ^^^^^^^^^^^^ this code block                   ^^^^^^^^^^^^^^^ may expand into attacker-controllable code
   |
   = note: audit confidence → High

error[unpinned-uses]: unpinned action reference
  --> @@INPUT@@:29:7
   |
29 |       uses: azure/powershell
   |       ^^^^^^^^^^^^^^^^^^^^^^ action is not pinned to a hash (required by blanket policy)
   |
   = note: audit confidence → High

9 findings (4 suppressed): 0 unknown, 0 informational, 0 low, 0 medium, 5 high
